[build-system] # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project] # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "geotech-pandas"
version = "0.3.0"
description = "A Pandas extension for geotechnical calculations."
readme = "README.md"
authors = [
  { name = "Fraser Dominic David", email = "77269589+fraserdominicdavid@users.noreply.github.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.1.2",
    "statsmodels>=0.14.4",
]

[project.urls] # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/fraserdominicdavid/geotech-pandas"
source = "https://github.com/fraserdominicdavid/geotech-pandas"
changelog = "https://github.com/fraserdominicdavid/geotech-pandas/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/fraserdominicdavid/geotech-pandas/releases"
documentation = "https://github.com/fraserdominicdavid/geotech-pandas"
issues = "https://github.com/fraserdominicdavid/geotech-pandas/issues"

[dependency-groups] # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
dev = [
  "commitizen (>=4.3.0)",
  "coverage[toml] (>=7.6.10)",
  "ipykernel (>=6.29.4)",
  "ipython (>=8.18.0)",
  "ipywidgets (>=8.1.2)",
  "mypy (>=1.14.1)",
  "numpydoc>=1.6.0",
  "pandas-stubs>=2.0.3.230814",
  "pickleshare>=0.7.5",
  "poethepoet (>=0.32.1)",
  "pre-commit (>=4.0.1)",
  "pydata-sphinx-theme>=0.14.1",
  "pytest (>=8.3.4)",
  "pytest-mock (>=3.14.0)",
  "pytest-xdist (>=3.6.1)",
  "ruff (>=0.9.2)",
  "sphinx>=7.2.6",
  "sphinx-autosummary-accessors>=2023.4.0",
  "sphinx-design>=0.5.0",
]

[tool.commitizen] # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"
version_files = ["docs/conf.py:version"]
changelog_file = "docs/changelog/changelog.rst"
template = "docs/_templates/commitizen/changelog.rst"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml"
testpaths = ["src", "tests"]
xfail_strict = true

[tool.ruff] # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "C90",
  "D",
  "DTZ",
  "E",
  "F",
  "FLY",
  "FURB",
  "I",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "Q",
  "RET",
  "RUF",
  "RSE",
  "SIM",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = ["D203", "D213", "E501", "PGH002", "PGH003", "RET504", "S101", "S307"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.executor] # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

[tool.poe.tasks.docs]
help = "Generate this package's docs"
cmd = """
    sphinx-build
      -M $buildername
      $sourcedirectory
      $builddirectory
      $sphinxopts
    """

[[tool.poe.tasks.docs.args]]
help = "The builder to use (default: html)"
name = "buildername"
options = ["-b", "--builder"]
default = "html"

[[tool.poe.tasks.docs.args]]
help = "The source directory (default: docs)"
name = "sourcedirectory"
options = ["--sourcedir"]
default = "docs"

[[tool.poe.tasks.docs.args]]
help = "The build directory (default: docs/_build)"
name = "builddirectory"
options = ["--builddir"]
default = "docs/_build"

[[tool.poe.tasks.docs.args]]
help = "The additional sphinx options to use (default: None)"
name = "sphinxopts"
options = ["-O", "--opts"]
default = ""
[tool.poe.tasks.lint]
help = "Lint this package"
cmd = """
    pre-commit run
      --all-files
      --color always
    """

[tool.poe.tasks.test]
help = "Test this package"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage run"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage report"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage xml"
